Worked on bug with icons (when content above is too small): sent email to Michael, display only resident expertise on experts page

--- a/public/stylesheets/michael-default.css
+++ b/public/stylesheets/michael-default.css
@@ -19,10 +19,13 @@ div.user-photo {
 }
 div.bam-user-details-icons {
 	float: left;
+	min-width: 400px;
+	width: 100%;
 }
  div.bam-user-details {
 	float: left;
 	width: 80%;
+	min-width: 400px;
 }
 #bam-warning-profile-draft {
 	float: left;
